--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,28 @@
 
+h1.thick {
+    font-weight: bold;
+    font-size: 60px;
+    text-indent: 350px;
+}
+body {
+    
+    background-image: url("https://scontent-atl3-1.xx.fbcdn.net/t31.0-8/14700748_1309902845687292_7848863570594675910_o.jpg");
+    background-size: 100%;
+    
+}
+h1 {
+    color: white;
+    text-align: center;
+    height: 
+  
+}
+p {
+    font-family: Bookman Old Style;
+    font-size: 20px;
+    color: royalblue;
+}
+p1{
+    font-family: Bookman Old Style;
+    font-size: 20px;
+    color: black;
+{
