--- a/css/main.css
+++ b/css/main.css
@@ -32,9 +32,9 @@ p1{
     font-family: Bookman Old Style;
     font-size: 20px;
     color: black;
-{
-    head
-{
+}
+head 
+   {
 
 icon: '/myfiles/testimage.xcf';
 
